[package]
name = "ecom-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [ "runtime-tokio-rustls", "postgres", "macros", "mysql" ]}
tokio = { version = "1.48.0", features = ["full"] }
tokio-macros = "2.6.0"
