[package]
name = "ecom-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

sqlx = {version = "0.8.6",features = ["runtime-tokio-rustls", "mysql", "macros", "chrono"]}

tokio = { version = "1.48.0", features = ["full"] }
